tests/negative/syntax/malformed_for.stream
// EXPECT: Syntax Error
for (var i = 0 i < 10 i = i + 1) { // Missing ';'
    print(i);
}